# e4Coin

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  COPYING  INSTALL.md  Jenkinsfile  Jenkinsfile.gitian  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  autogen.sh  config.status  configure  configure.ac  e4coinVS2017.sln  e4coinVS2017.vcxproj  e4coinVS2017.vcxproj.filters  libe4coinconsensus.pc  libe4coinconsensus.pc.in  libtool  run-local-gitlab-ci.sh
src/: Makefile  Makefile.am  Makefile.bench.include  Makefile.in  Makefile.leveldb.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  activemasternode.cpp  activemasternode.h  addrdb.cpp  addrdb.h  addressindex.h  addrman.cpp  addrman.h  alert.cpp  alert.h  amount.cpp  amount.h  arith_uint256.cpp  arith_uint256.h  base58.cpp  base58.h  batchedlogger.h  bip39.h  bip39_english.h  blockencodings.cpp  blockencodings.h  bloom.cpp  bloom.h  cachemap.h  cachemultimap.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  (+157 more)
src/.deps/: e4coind-e4coind.Po
src/bench/: .gitignore  Examples.cpp  base58.cpp  bench.cpp  bench.h  bench_e4coin.cpp  bls.cpp  bls_dkg.cpp  ccoins_caching.cpp  checkblock.cpp  checkqueue.cpp  coin_selection.cpp  crypto_hash.cpp  ecdsa.cpp  lockedpool.cpp  mempool_eviction.cpp  perf.cpp  perf.h  rollingbloom.cpp  string_cast.cpp
src/bench/data/: block813851.raw
src/bls/: bls.cpp  bls.h  bls_batchverifier.h  bls_ies.cpp  bls_ies.h  bls_worker.cpp  bls_worker.h
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  glibcxx_sanity.cpp  sanity.h  strnlen.cpp
src/config/: e4coin-config.h  e4coin-config.h.in  stamp-h1
src/consensus/: consensus.h  merkle.cpp  merkle.h  params.h  validation.h
src/crypto/: aes.cpp  aes.h  common.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha512.cpp  sha512.h
src/evo/: cbtx.cpp  cbtx.h  deterministicmns.cpp  deterministicmns.h  evodb.cpp  evodb.h  mnauth.h  providertx.cpp  providertx.h  simplifiedmns.cpp  simplifiedmns.h  specialtx.cpp  specialtx.h
src/llmq/: quorums.cpp  quorums.h  quorums_blockprocessor.cpp  quorums_blockprocessor.h  quorums_chainlocks.h  quorums_commitment.cpp  quorums_commitment.h  quorums_debug.h  quorums_dkgsession.h  quorums_dkgsessionhandler.cpp  quorums_dkgsessionhandler.h  quorums_dkgsessionmgr.cpp  quorums_dkgsessionmgr.h  quorums_dummydkg.cpp  quorums_dummydkg.h  quorums_init.cpp  quorums_init.h  quorums_instantsend.h  quorums_signing.h  quorums_signing_shares.h  quorums_utils.cpp  quorums_utils.h
src/policy/: fees.cpp  fees.h  policy.cpp  policy.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  bitcoinaddressvalidator.cpp  bitcoinaddressvalidator.h  bitcoinamountfield.cpp  bitcoinamountfield.h  bitcoingui.cpp  bitcoingui.h  bitcoinunits.cpp  bitcoinunits.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  e4coin-qt.files  e4coin.cpp  e4coin.qrc  e4coin_locale.qrc  e4coinstrings.cpp  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macdockiconhandler.mm  macnotificationhandler.h  macnotificationhandler.mm  (+72 more)
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  debugwindow.ui  helpmessagedialog.ui  intro.ui  modaloverlay.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: e4coin_ar.ts  e4coin_bg.ts  e4coin_de.ts  e4coin_en.ts  e4coin_es.ts  e4coin_fi.ts  e4coin_fr.ts  e4coin_it.ts  e4coin_ja.ts  e4coin_ko.ts  e4coin_nl.ts  e4coin_pl.ts  e4coin_pt.ts  e4coin_ru.ts  e4coin_sk.ts  e4coin_sv.ts  e4coin_th.ts  e4coin_tr.ts  e4coin_vi.ts  e4coin_zh_CN.ts  e4coin_zh_TW.ts
src/qt/res/: e4coin-qt-res.rc
src/qt/test/: Makefile  compattests.cpp  compattests.h  (+8 more)
src/rpc/: blockchain.cpp  client.cpp  client.h  governance.cpp  masternode.cpp  mining.cpp  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  register.h  rpcevo.cpp  server.cpp  server.h
src/script/: e4coinconsensus.cpp  e4coinconsensus.h  interpreter.cpp  interpreter.h  ismine.cpp  ismine.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h
src/secp256k1/: Makefile  Makefile.in  aclocal.m4  config.status  configure  libsecp256k1.pc  libtool
src/support/: cleanse.cpp  cleanse.h  events.h  lockedpool.cpp  lockedpool.h
src/test/: DoS_tests.cpp  Makefile  README.md  addrman_tests.cpp  alert_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bctest.py  bip32_tests.cpp  bip39_tests.cpp  bitcoin-util-test.py  blockencodings_tests.cpp  bloom_tests.cpp  bls_tests.cpp  bswap_tests.cpp  cachemap_tests.cpp  cachemultimap_tests.cpp  checkqueue_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  cuckoocache_tests.cpp  dbwrapper_tests.cpp  evo_deterministicmns_tests.cpp  evo_simplifiedmns_tests.cpp  getarg_tests.cpp  governance_validators_tests.cpp  hash_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  multisig_tests.cpp  net_tests.cpp  (+36 more)
src/univalue/: Makefile  Makefile.in  config.status  configure  libtool
src/wallet/: coincontrol.h  crypter.cpp  crypter.h  db.cpp  db.h  rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h
src/zmq/: zmqabstractnotifier.cpp  zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.cpp  zmqnotificationinterface.h  zmqpublishnotifier.cpp  zmqpublishnotifier.h
(+463 files in other folders)
